Fix scrollbars on mobile

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -4,6 +4,11 @@ body {
   width: 100%;
 }
 
+.app {
+  /* Not sure what's giving me scrollbars. This gets rid of them. */
+  overflow: hidden; 
+}
+
 .all-fours-game {
   height: 100vh;
   max-width: 100vw;
